# videoserver

./: README.md  package.json  tsconfig.json
data-layer/: poetry.toml  pyproject.toml
data-layer/data_layer/: settings.py
data-layer/data_layer/models/: videos.py
data-layer/migrations/: env.py
data-layer/migrations/versions/: 1b6582e7b87b_create_video_table.py
data-layer/tests/: test_data_layer.py
services/videoserver/: package.json
services/videoserver/prisma/: .env  schema.prisma
