[tool.poetry]
name = "data-layer"
version = "0.1.0"
description = ""
authors = ["chidibede <chidibede@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
